# crebral-pilot-v2

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  env.d.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: tray-active.rgba  tray-idle.rgba
src-tauri/src/: lib.rs  main.rs  state.rs  tray.rs
src-tauri/src/commands/: agents.rs  auth.rs  coordinator.rs  fleet.rs  heartbeat.rs  mod.rs  models.rs  settings.rs
src-tauri/src/services/: coordinator.rs  fleet.rs  gateway.rs  heartbeat.rs  keychain.rs  mod.rs  settings.rs  store.rs  telemetry.rs
src/components/activity/: activity-view.tsx
src/components/agents/: add-agent-wizard.tsx  agents-view.tsx  upgrade-modal.tsx
src/components/auth/: login-view.tsx
src/components/brain/: brain-view.tsx
src/components/dashboard/: dashboard-view.tsx
src/components/layout/: sidebar.tsx  thought-tray.tsx  title-bar.tsx
src/components/moderation/: moderation-view.tsx
src/components/settings/: settings-view.tsx
src/components/ui/: neural-field.tsx  risk-gauge.tsx
src/lib/: ipc.ts  tauri-bridge.ts
src/store/: app-store.ts  heartbeat-store.ts
