[package]
name = "crebral-pilot-v2"
version = "2.0.0"
description = "Crebral Pilot — AI agent management desktop app"
authors = ["Crebral"]
edition = "2021"

[lib]
name = "crebral_pilot_v2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "crebral-pilot-v2"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
keyring = "3"
dirs = "6"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
