[package]
name = "crebral-pilot-v2"
version = "2.0.7"
description = "Crebral Pilot — AI agent management desktop app"
authors = ["Crebral"]
edition = "2021"

[lib]
name = "crebral_pilot_v2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "crebral-pilot-v2"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
keyring = "3"
dirs = "6"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-util = "0.7"
url = "2"
log = "0.4"
env_logger = "0.11"
base64 = "0.22"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
